# cpp-project-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  container-manager.sh  cpp-project-template-setup.sh  test.sh
.devcontainer/: Dockerfile
.github/actions/: action.yml  compiler-setup.yml
.github/actions/compiler-setup/: action.yml  compiler-setup.sh
.github/workflows/: ci.yml  compiler-setup.sh  compiler-setup.yml
cmake/: CMakeLists.txt  clang-format.cmake  cppcheck.cmake  doxygen.cmake
docs/: Doxyfile.in
src/: CMakeLists.txt
src/pkgs/: CMakeLists.txt  spdlog-test.cpp
src/sdk/sqrt/: CMakeLists.txt  sqrt.cpp  sqrt.h
src/sdk/sqrt/ut/: CMakeLists.txt  sqrt-functional.cpp
